Fix jumping background image

--- a/src/assets/scss/atoms/_body.scss
+++ b/src/assets/scss/atoms/_body.scss
@@ -1,9 +1,25 @@
 body {
   @extend %v-scroll;
   width: 100%;
-  height: 100vh;
-  background-image: url('../images/ui/background.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: left top;
+  min-height: 100vh;
+  position: relative;
+
+  .body-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: inherit;
+    display: flex;
+    .body-bg-image {
+      width: 100%;
+      height: 100%;
+      background-image: url('../images/ui/background.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: left top;
+    }
+  }
 }
+
